SyncedIn Project - Final Copy
It gives me immense pleasure to publish the final copy of SyncedIn that
has been adapted to work in the mirror api simulation environment.
However, there has been no compromise with its working on the Google
Glass.

--- a/war/index.html
+++ b/war/index.html
@@ -6,18 +6,20 @@
   </head>
 
   <body>
+  <div style="margin-left=20%;margin-right=20%">
     <h1>Hello User! Welcome to SyncedIn</h1>
-	
+	<h4>It allows you to always remain synced with your surroundings, no matter wherever you go.</h4>
     <table>
       <tr>
         <td colspan="2" style="font-weight:bold;">Choose:</td>        
       </tr>
       <tr>
-        <td><a href="lunchroulette">LunchRoulette</a></td>
+        <td><a href="lunchroulette">Get your timeline items for the day</a></td>
       </tr>      
       <tr>
         <td><a href="logout">Logout</a></td>
       </tr>      
     </table>
+  </div>  
   </body>
 </html>
